--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
   "miniprogramRoot": "./dist",
   "projectname": "zc0511",
   "description": "志愿填报",
-  "appid": "wx2b20075ec7ec6359",
+  "appid": "wx2671abc7f83d2f0c",
   "setting": {
     "urlCheck": true,
     "es6": false,
