--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
 	"license": "MIT",
 	"dependencies": {
 		"@babel/runtime": "^7.7.7",
-		"@tarojs/components": "3.2.9",
-		"@tarojs/react": "3.2.9",
-		"@tarojs/runtime": "3.2.9",
-		"@tarojs/taro": "3.2.9",
+		"@tarojs/components": "3.2.10",
+		"@tarojs/react": "3.2.10",
+		"@tarojs/runtime": "3.2.10",
+		"@tarojs/taro": "3.2.10",
 		"echarts-taro3-react": "^1.0.13",
 		"mobx": "^4.8.0",
 		"mobx-react": "^6.1.4",
@@ -46,17 +46,18 @@
 		"react-dom": "^17.0.0"
 	},
 	"devDependencies": {
-		"@types/webpack-env": "^1.13.6",
-		"@types/react": "^17.0.2",
-		"@tarojs/mini-runner": "3.2.9",
 		"@babel/core": "^7.8.0",
-		"@tarojs/webpack-runner": "3.2.9",
-		"babel-preset-taro": "3.2.9",
-		"eslint-config-taro": "3.2.9",
+		"@tarojs/mini-runner": "3.2.10",
+		"@tarojs/webpack-runner": "3.2.10",
+		"@types/react": "^17.0.2",
+		"@types/webpack-env": "^1.13.6",
+		"babel-preset-taro": "3.2.10",
 		"eslint": "^6.8.0",
-		"eslint-plugin-react": "^7.8.2",
+		"eslint-config-taro": "3.2.10",
 		"eslint-plugin-import": "^2.12.0",
+		"eslint-plugin-react": "^7.8.2",
 		"eslint-plugin-react-hooks": "^4.2.0",
-		"stylelint": "9.3.0"
+		"stylelint": "9.3.0",
+		"uglifyjs-webpack-plugin": "^2.2.0"
 	}
 }
